# ensembly

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  skills-lock.json
arch-design/: formal_problem_definition.AppGenMathPhyLang.md  time-and-energy-saving-virtual-real-life-handler.md
crates/peram-kernel/: Cargo.toml
crates/peram-kernel/src/: approvals.rs  backup.rs  digital_flow.rs  lib.rs  main.rs  privacy.rs  realm.rs  store.rs  turn.rs  vault.rs
docs/: CLONE-COPILOT.md  DECISIONS.md  ENGINE.md  EVE-FIT.md  FOUNDATION-CRITIQUE.md  GAME-STACK.md  LIFE-OS-BOUNDARY.md  MAP.md  PATTERNS-DEV.md  PLAYBOOK.md  PREMFLOW-FIT.md  PRIVACY.md  PRODUCT-CHARTER.md  SWARM-DESIGN.md  WORLD-FOUNDATION.md
fixtures/: lifeos-finance-card.md  lifeos-portfolio-sample.md  state-sample.json  wait-snapshot.json
legacy/: README.md
public/game/: engine.js  (+6 more)
scripts/: build-wasm.sh  link-shared-capture.mjs  serve-game.mjs  smoke-game.mjs
src/: approvals.js  balance.js  dashboard.js  day.js  digital-flow.js  graph.js  index.js  ingest.js  loop.js  plan-format.js  play.js  prioritize.js  privacy.js  realm.js  sovereignty-gist.js  turn.js
test/: activity-store.test.js  approvals.test.js  balance.test.js  dashboard.test.js  day.test.js  digital-flow.test.js  focus-sync.test.js  game-patterns.test.js  game-session.test.js  graph.test.js  growth.test.js  lifeos-portfolio.test.js  loop.test.js  map-orientation.test.js  play.test.js  premflow-share.test.js  prioritize.test.js  privacy.test.js  realm.test.js  sovereignty-gist.test.js  spn.test.js  turn.test.js  world.test.js
(+47 files in other folders)
