[package]
name = "peram-kernel"
version = "0.3.0"
edition = "2021"
description = "Game of Peram life kernel — privacy, turn, HITL, digital-flow, durable store, backup"
license = "MIT"

[[bin]]
name = "peram"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
